--- a/ui/Angular/src/app/department/show-dep/show-dep.component.html
+++ b/ui/Angular/src/app/department/show-dep/show-dep.component.html
@@ -1,3 +1,32 @@
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary float-right m-2" 
+data-toggle="modal" data-target="#exampleModal"
+(click)="addClick()"
+data-backdrop="static" data-keyboard="false"
+>
+    Add Department
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+          <button type="button" class="close" 
+          data-dismiss="modal" aria-label="Close"
+          (click)="closeClick()" >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <app-add-edit-dep [dep]="dep" *ngIf="ActivateAddEditDepComp">
+            </app-add-edit-dep>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <table class="table table-striped">
     <thead>
         <tr>
